--- a/.github/workflows/feature-test.yml
+++ b/.github/workflows/feature-test.yml
@@ -18,6 +18,9 @@ jobs:
         with:
           php-version: 8.4
 
+      - name: Decrypt .env file
+        run: php artisan env:decrypt --key=${{ secrets.LARAVEL_ENCRYPTION_KEY }}
+
       - name: Install dependencies
         uses: ramsey/composer-install@v3
         with:
